<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/MarginBig"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/MarginBig"
        android:layout_marginBottom="@dimen/MarginMiddle"
        android:layout_marginStart="@dimen/MarginBig"
        android:layout_marginTop="@dimen/MarginMiddle"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textSize="@dimen/TextSizeMA" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/bg_title" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/MarginMiddle"
        android:ems="10"
        android:hint="@string/prefs_kkm_use_10_driver"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/TextSizeMiddle"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginMiddle"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/no"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/TextSizeMA" />

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/MarginMiddle"
            android:layout_marginEnd="@dimen/MarginMiddle"
            android:background="@android:color/transparent"
            android:text="@string/yes"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/TextSizeMA" />
    </LinearLayout>

</LinearLayout>