<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_cheque"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/kassa_reciept" />

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/anchor"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|top"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/print_in_progress"
                android:textColor="@color/bg_title"
                android:textSize="@dimen/TextSizeBA"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_error"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ButtonCashNumber"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/txt_time"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/TextSizeMiddle" />

                <Button
                    android:id="@+id/btn_try_again"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/btn_cheque"
                    android:text="@string/try_again"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/TextSizeMiddle" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/MarginAverage"
                android:layout_marginRight="@dimen/MarginAverage"
                android:gravity="center"
                android:text="@string/print_exception"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/TextSizeAverage"
                android:visibility="gone" />
        </RelativeLayout>



    </FrameLayout>

</RelativeLayout>